# classwork

./: CMakeLists.txt  LICENSE.txt  Program 2 - adventure.webloc  README.md  app.py  chasean.adventure.c  chatclient.py  chatserv.c  cipher_lib.c  cipher_lib.h  compileall  get_random.c  index.html  keygen.c  main.c  main.cpp  main.py  makefile  otp_dec.c  otp_dec_d.c  otp_enc.c  otp_enc_d.c  out_words.txt  policyserver.c  requirements.txt  server_lib.c  server_lib.h  test.py  views.py  ya.py
Networking_ChatClientServ/: chatclient.py  readme.md
Networking_FileServ/: chatserv.c  ftclient.py  ftserver.c  makefile  readme.md
OS1_Adventure/: CMakeLists.txt  PLEASE_README.txt  README.md  chasean.adventure.c
OS1_OTP/: CMakeLists.txt  compileall  keygen.c  otp_dec.c  otp_dec_d.c  otp_enc.c  readme.md  server_lib.c
OS1_ShellStats/: README.md  stats
about_me/: index.html
assignment1/: chapter02-project01.html  chapter02-project03.html
assignment2/: index.html  pageOne.html  pageTwo.html  style.css
assignment3/: index.html  pageA.html  pageB.html  rockpaperscissors.css  script.js  slideShow.html  slideshow.html  style.css
assignment4/: play.php  register.php  setup.php
assignment4/views/: footer.php  header.php
assignment5/: play.php  script.js  setup.php
assignment5/views/: header.php
assignment_1/: CMakeLists.txt  README.md  report.md
assignment_1/paper/: Makefile  __mt19937ar.c.tex  bash_history.sh  bash_history.sh.tex  get_random.c.tex  pygments.tex
assignment_2/: CMakeLists.txt  height.cpp  main.cpp  main.py  settings.h  ui.py
assignment_3/: CMakeLists.txt  main.cpp  settings.h
assignment_4/: CMakeLists.txt  agents.cpp  agents.h  globals.h  main.cpp  randf.h
assignment_5/: CMakeLists.txt  main.cpp  simd.p5.cpp  simd.p5.h
assignment_6/: CMakeLists.txt  README.md  first.cl  first.cpp  report.md
assignment_7/: chasean_particles.cl  main.cpp
concurrency_5/: main.py
cs290/: README.md  index.html
cs290/assignment1/: chapter02-project01.html  chapter02-project02.html  chapter02-project03.html  index.html
cs290/assignment2/: pageOne.html  pageTwo.html  style.css
cs290/assignment3/: rockpaperscissors.html  rockpaperscissors.js  slideshow.css  slideshow.js
cs290/assignment4/: composer.json  logout.php  style.css
cs290/assignment5/: index.php  login.php  scoreboard.php  style.css
cs290/final_project/: cart.html  cart.php  checkout.php  contact.html  edit_cart.php  index.html  learnmore.html  learnmore.php  login.html  past.php  setup.php
cs419/problem_1/: CMakeLists.txt  main.cpp
cs475/assignment_1/: main.cpp
cs475/assignment_2/: CMakeLists.txt  README.md  height.cpp
cs475/assignment_3/: CMakeLists.txt  report.md
cs475/assignment_4/: CMakeLists.txt  agents.cpp  main.cpp
cs475/assignment_5/: CMakeLists.txt  main.cpp  simd.p5.cpp  simd.p5.h
cs475/assignment_6/: main.cpp
cs475/assignment_7/: CMakeLists.txt  main.cpp
cs496/assignment_1/: composer.json
cs496/assignment_2/: main.py
cs496/assignment_3/: test.py  views.py
cs496/final/: README.md
finalProject/: AccountViewController.swift  AppDelegate.swift  FirstViewController.swift  ListModel.swift  ListViewController.swift  SecondViewController.swift  SignInViewController.swift  TabBarController.swift
finalProject.xcodeproj/: project.pbxproj
finalProject/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
final_project/: cart.php  checkout.php  contact.php  index.php  login.php  setup.php
final_project/static/: script.js  style.css
final_project/views/: base.tpl  checkout.tpl  index.tpl  learnmore.tpl  login.tpl  shoppingcart.tpl
machine_learning/hmw2/: HW2_4_17.py
machine_learning/hmw3/: DT_HW3.py  HW3.py
machine_learning/hmw4/: MDP.PY  k_means_clustering.py
models/: magnet.py  website.py
os2/assignment_writing_2/: paper.aux  paper.out  paper.tex  paper.toc  pygments.tex
os2/concurrency_1/: main.py  run-emoji.sh  ui.py
os2/concurrency_3/: CMakeLists.txt  main.cpp
os2/concurrency_5/: chasean_concurrency_5_py2.py
os2/homework_1/: get_random.c  get_random.h
os2/homework_2/: CMakeLists.txt  sstf-iosched.c
paper/: paper.tex
server/: list_server.py
templates/: base.html  edit.html  index.html
web/: 404.html  index.php
web_mobile_guide/: index.html
(+64 files in other folders)
